fix(tpa): remediate pass 34 findings 1-4